fixed spacings + dividers

--- a/src/scss/_3col.scss
+++ b/src/scss/_3col.scss
@@ -37,19 +37,22 @@
       text-align: left;
       font-family: 'Montserrat', sans-serif;
       font-weight: bolder;
+      padding-top: 2em;
     }
     .col3__block-textbox-title {
       font-size: 2em;
       text-align: left;
       font-family: 'Ropa Sans', sans-serif;
-      line-height: 39.6pt;
+      line-height: 1.2em;
       letter-spacing: -40;
+      padding-bottom: 0.5em;
     }
     .col3__block-textbox-author {
       font-size: 1em;
       text-align: left;
       font-family: 'Montserrat', sans-serif;
       font-weight: bold;
+      padding-bottom: 0.3em;
     }
 
     .col3__block-textbox-body {
